--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "p5": "^0.10.2",
     "popper.js": "^1.16.1",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.12.0",
     "react-p5": "^1.3.2",
     "react-p5-wrapper": "^2.0.0",
@@ -58,5 +59,4 @@
   "devDependencies": {
     "prettier": "^1.19.1"
   }
-  
 }
